feat(auth): set up authentication services with routes, controllers, and prisma - Initialized backend app entry point in `index.ts`. - Configured vitest with `vitest.config.ts` for unit testing. - Integrated Prisma via `db-client.ts`. - Defined datbase schema in `schema.prisma`. - Added `auth.controller.ts`, `auth.services.ts`, and `auth.ts` route for handling user signup

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,33 @@
-# Node
-node_modules/
-.env
+# Node modules
+**/node_modules/
 
-# React
-frontend/node_modules/
-frontend/build/
+# Build outputs
+**/dist/
+**/build/
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Environment variables
+**/.env
+
+# IDE/editor folders
+.vscode/
+.idea/
+
+# OS metadata
+.DS_Store
+
+# Prisma generated client
+/backend/generated/
+**/.prisma/
+
+# SQLite (if used)
+**/*.db
+**/*.db-journal
+
+# Misc
+*.local
