--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "dev": "ts-node src/index.ts",
+    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
     "test": "vitest"
@@ -10,10 +10,13 @@
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.14.1",
     "@vitest/ui": "^3.1.2",
     "prisma": "^6.6.0",
+    "supertest": "^7.1.0",
     "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3",
     "vitest": "^3.1.2"
   },
